--- a/src/components/settings_modal/settings_modal.scss
+++ b/src/components/settings_modal/settings_modal.scss
@@ -1,6 +1,7 @@
 @import 'src/_variables.scss';
 .settings-modal {
   overflow: hidden;
+  height: 100%;
 
   &.peek {
     .settings-modal-panel {
@@ -27,7 +28,7 @@
 
     @media all and (max-width: 800px) {
       max-width: 100vw;
-      height: 100vh;
+      height: 100%;
     }
 
     >.panel-body {
